--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.9.0",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "notistack": "^3.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-simple-typewriter": "^5.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
